--- a/booknest-api/package.json
+++ b/booknest-api/package.json
@@ -19,11 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "nodemon": "^3.1.9"
   },
   "devDependencies": {
-    "@types/node": "^22.13.5",
-    "nodemon": "^3.1.9",
-    "typescript": "^5.7.3"
+    "@types/node": "^22.13.5"
   }
 }
