--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "booknest",
   "private": true,
   "version": "0.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
